--- a/MakeFile
+++ b/MakeFile
@@ -1,46 +1,39 @@
 pipeline {
     agent any
+
     stages {
-        stage('Clonage du dépôt GitHub') {
-            steps {
-                // Cloner le dépôt GitHub contenant le code et le Makefile
-                git branch: 'main', url: 'https://github.com/csurqunix/StringInverser.git'
-            }
-        }
-        
         stage('Build') {
             steps {
                 script {
                     if (isUnix()) {
-                        // Si Unix, utiliser 'make' avec l'interpréteur 'sh'
+                        // Si le système est de type Unix
                         sh 'make'
                     } else {
-                        // Si autre (probablement Windows), utiliser 'make' avec l'utilitaire 'bat'
+                        // Si le système est Windows
                         bat 'make'
                     }
                 }
             }
         }
-        
+
         stage('Permissions') {
             when {
-                expression { isUnix() } // Exécuter uniquement sur les systèmes Unix
+                expression { isUnix() } // Ce stage ne sera exécuté que sur des systèmes Unix
             }
             steps {
-                // Donner les permissions d'exécution sur le fichier binaire généré
-                sh 'chmod +x inverser' // Assure que le binaire 'inverser' existe
+                script {
+                    sh 'chmod +x string_inverser' // donner les droits d'exécution sur le binaire
+                }
             }
         }
-        
+
         stage('Nettoyage') {
             steps {
                 script {
                     if (isUnix()) {
-                        // Si Unix, nettoyer avec 'make clean' via 'sh'
-                        sh 'make clean'
+                        sh 'make clean' // Nettoyage sur Unix
                     } else {
-                        // Si autre (Windows), nettoyer avec 'make clean' via 'bat'
-                        bat 'make clean'
+                        bat 'make clean' // Nettoyage sur Windows
                     }
                 }
             }
